RecommendationEngine/RecommendationEngine/FrontEnd/src/containers/TemplateConfigurationModal/TemplateConfigurationModal.css
#template-modal-container > div{
    display: grid;
    width: 100%; 
    height: 100%;
    text-shadow: none;
    align-content: center;
  }

#parent-div {
  display: grid;
  grid-template-columns: 1fr 1.2fr;
}

#template-grid{
  display: grid;
  grid-template-columns: 135px 135px; 
  grid-template-rows: 135px 135px;
  row-gap: 5px; 
  column-gap: 20px;
} 

#info-div {
width: 90%;
height: 100%;
}

#item-info1{
height: 130px;
margin-bottom: 7%;
}

#item-info2{
  height: 100px;
  margin-top: 5%;
  margin-bottom: 5%;
}

#item-info3{
  height: 80px;
  margin-top: 5%;
  margin-bottom: 5%;
}

#item-template-default{
  display: grid;
  border-width: 2px;
  border-radius: 10px;
  border-color: #DFE0EB;
  border-style: solid;
  background-color: white;
  align-items: center;
  height: 120px;
  width: 120px;
  margin-left: 25%;
  text-align: center;
}


#item-template-default:hover{
  background-color: #E8E7E7;
  border-width: 2.5px;
  border-color: transparent;
  transition: all 500ms;
}


#item-template-selected{
  display: grid;
  border-radius: 10px;
  border-color:  #4DD3EF;
  border-width: 3px; 
  border-style: solid;
  align-items: center;
  height: 120px;
  width: 120px;
  margin-left: 25%;
  text-align: center;
  transition: all 500ms;
  box-shadow: 0 0 1px 0 rgb(77,212,239,1);
}

#template-label{
  color: #687480;
  width: 100%;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-size: 11px;
  margin-bottom: 10%;
  text-align: center;
  text-transform: none;
  margin-top: 2%;
}

#template-icon{
  color: #687480;
  width: 30%;
  height: 30%;
}

.title-dialog-0.MuiTypography-root{
  color: #212529;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-weight: bold;
  font-size: 15px;
  min-width: 90%;
  margin-bottom: 2%;
}

.title-dialog-1.MuiTypography-root{
  color: #212529;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-weight: bold;
  font-size: 12px;
  min-width: 90%;
}

.subtitle-dialog-1.MuiTypography-root{
  color:#868282;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-size: 12px;
  width: 85%;
  margin-top: 2%;
}

.list-dialog-1.MuiTypography-root{
  color:#868282;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-size: 12px;
  min-width: 90%;
  margin-top: 2%;
}

#item-align{
  list-style-type: none;
  padding: 0;
  margin: 0; 
  width: 100%;
}

#list-align{
  padding: 0;
  margin-left: 4%;
  width: 100%;
}

.divider-item.MuiDivider-root{
  max-width: 90%;
}



  

